<resources>
    <string name="app_name">Legends of Runeterra Deck Builder</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="loading_error">Unable to fetch LoR data. Please check Internet. \n\nError message: %1$s</string>

    <!-- Strings for language preference -->
    <string name="pref_card_key">pref_card</string>
    <string name="pref_card_title">Card</string>

    <string name="pref_description_key">pref_description</string>
    <string name="pref_description_title">Description</string>

    <string name="pref_rarity_key">pref_rarity</string>
    <string name="pref_rarity_title">Rarity</string>



    <string name="logout_string">Logout</string>
    <string name="deck_archive">Deck Archive</string>
    <string name="build_deck">Build Deck</string>
    <string name="settings_string">Settings</string>
    <string name="deck_name_string">Deck Name</string>
    <string name="cards">Cards</string>
    <string name="card_count_placeholder">0/40</string>
    <string name="finish_button_string">Finish</string>
    <string name="cost">Cost</string>
    <string name="name">Name</string>
    <string name="rarity">Rarity</string>
    <string name="description">Description</string>
    <string name="attack">Attack</string>
    <string name="health">Health</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="developers">API Info</string>
    <string name="security">Security</string>
    <string name="password">Change Password</string>
    <string name="username">Change Username</string>
    <string name="pick_language">Choose Your Language</string>
</resources>