<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft="10dp"
    android:paddingRight = "10dp"
    android:paddingTop = "15dp"
    android:paddingBottom = "15dp">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_title"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/build_deck_button"
        android:layout_below="@id/main_title"
        android:text="@string/build_deck"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deck_archive_button"
        android:text="@string/deck_archive"
        android:layout_below="@id/build_deck_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout_button"
        android:text="@string/logout_string"
        android:layout_below="@id/deck_archive_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_button"
        android:text="@string/settings_string"
        android:layout_below="@id/logout_button"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>