<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft="10dp"
    android:paddingRight = "10dp"
    android:paddingTop = "15dp"
    android:paddingBottom = "15dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


        


    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginTop="50dp"
        android:layout_below="@id/app_title"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"/>



    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_below="@id/username_input"
        android:layout_marginTop="10dp"/>




    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/Login"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignEnd="@id/password_input"
        android:layout_alignRight="@id/password_input"
        android:layout_below="@id/password_input"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signup"
        android:text="@string/SignUp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignEnd="@id/login_button"
        android:layout_alignRight="@id/login_button"
        android:layout_below="@id/login_button"
        android:layout_marginTop="10dp"/>



</RelativeLayout>