<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/build_deck_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_deck"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="35dp"
        android:layout_marginTop="20dp"/>



    <TextView
        android:id="@+id/deck_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deck_name_string"
        android:layout_below="@id/build_deck_tv"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_toRightOf="@id/deck_name_tv"
        android:layout_below="@id/build_deck_tv"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deck_name_tv"
        android:text="@string/cards"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/cards_tv"/>


    <TextView
        android:id="@+id/card_count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deck_name_tv"
        android:text="@string/card_count_placeholder"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finish_deck_button"
        android:text="@string/build_deck"
        android:layout_below="@id/deck_name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cards_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_deck_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />


    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorError"
        android:visibility="invisible"/>



    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="top|center_horizontal"
        android:visibility="invisible"/>

</RelativeLayout>